Created view and set alias in the config file of webpack

--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "^3.0.2",
-    "coffeescript": "1.12.7",
-    "vue": "^2.5.8",
-    "vue-loader": "^13.5.0",
-    "vue-template-compiler": "^2.5.8"
+    "coffeescript": "1.12.7"
   },
   "devDependencies": {
+    "vue": "^2.5.8",
+    "vue-loader": "^13.5.0",
+    "vue-template-compiler": "^2.5.8",
     "webpack-dev-server": "^2.9.4"
   }
 }
